dev-system/services/nacos/nacos.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  labels:
    app: nacos
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8848
    name: server
    targetPort: 8848
  - port: 9848
    name: client-rpc
    targetPort: 9848
  - port: 9849
    name: raft-rpc
    targetPort: 9849
  - port: 7848
    name: old-raft-rpc
    targetPort: 7848
  selector:
    app: nacos

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  labels:
    app: nacos
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  serviceName: nacos-headless
  replicas: 1
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - nacos
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nacos
        imagePullPolicy: IfNotPresent
        image: nacos/nacos-server:v2.2.0-slim
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        ports:
        - containerPort: 8848
          name: client
        - containerPort: 9848
          name: client-rpc
        - containerPort: 9849
          name: raft-rpc
        - containerPort: 7848
          name: old-raft-rpc
        volumeMounts:
        - mountPath: /home/nacos/data
          name: data
        - mountPath: /home/nacos/logs
          name: logs
      volumes:
      - name: data
        hostPath:
          path: /data/ns/dev-system/nacos/data
      - name: logs
        hostPath:
          path: /data/ns/dev-system/nacos/logs
  selector:
    matchLabels:
      app: nacos
